--- a/index.html
+++ b/index.html
@@ -23,4 +23,46 @@
     </footer>
     
 </body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>meus projetos</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<header>
+<h1>Página Pessoal dos Projetos de Programação</h1>
+<h2>ana beatriz</h2>
+<nav>
+<ul>
+<li><a href="#sobre">Sobre Mim</a></li>
+<li><a href="#projetos">Projetos</a></li>
+<li><a href="#contato">Contato</a></li>
+</ul>
+</nav>
+</header>
+<section id="sobre">
+<h2>Sobre Mim</h2>
+<p>Descrição breve</p>
+</section>
+<section id="projetos">
+<h2>Projetos</h2>
+<div class="projetos">
+<ul>
+<li><button><a href="...">Projeto 1</a></button><img src="..."height="200px;" width="200px;"></li>
+<li><button><a href="...">Projeto 1</a></button><img src="..."></li>
+<li><button><a href="...">Projeto 1</a></button><img src="..."></li>
+</ul>
+</div>
+</section>
+<section id="contato">
+<h2>Contato</h2>
+<p>Email: zacarias.ana@escola.pr.gov.breve</p>
+</section>
+<footer>
+<p>&copy; 2024 ana beatriz</p>
+</footer>
+</body>
 </html>
